<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="206dp"
    android:background="@color/white"
    tools:background="@color/primary_500_50">

    <com.chenglei.humanrelationbooking.books.ArcLeftView
        android:id="@+id/leftArc"
        android:layout_width="139dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.chenglei.humanrelationbooking.books.RightArcView
        android:id="@+id/rightArc"
        android:layout_width="128dp"
        android:layout_height="149dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/books_type_newstore" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/create_new"
        android:textColor="@color/primary_500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receiveTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/receive_tips"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <ImageView
        android:id="@+id/see"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/icon_eye"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/receiveTips"
        app:layout_constraintStart_toEndOf="@id/receiveTips"
        app:layout_constraintTop_toTopOf="@id/receiveTips" />

    <TextView
            android:id="@+id/receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/tvCreate"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/receiveTips"
        app:layout_constraintTop_toBottomOf="@id/receiveTips"
        tools:text="111" />

    <TextView
        android:id="@+id/spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/receive"
        app:layout_constraintTop_toBottomOf="@id/receive"
        tools:text="送出的 7350" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/diffContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/receive">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/diff"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="40000" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/white_24"
        app:layout_constraintStart_toStartOf="@id/receive"
        app:layout_constraintEnd_toEndOf="@id/tvCreate"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@id/diffContainer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>